--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -1,6 +1,8 @@
-@for (product of products; track product.ID) {
-  <app-product [product]="product">
-  </app-product>
-} @empty {
-  Empty list of users
-}
+<div class="products-container">
+  @for (product of products(); track product.ID) {
+    <app-product [product]="product">
+    </app-product>
+  } @empty {
+    Empty list of users
+  }
+</div>
