changed catalog styles

--- a/src/app/pages/product-list/product-list.component.scss
+++ b/src/app/pages/product-list/product-list.component.scss
@@ -3,4 +3,7 @@
   flex-wrap: wrap;
   column-gap: 16px;
   row-gap: 16px;
+  // background-color: #D0C4DF;
+  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+  padding: 14px 16px;
 }
