--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,9 +1,9 @@
 .product-card {
-  max-width: 235px;
+  max-width: 250px;
   border: unset;
-  border-radius: unset;
+  border-radius: 5px;
   box-shadow: unset;
-  background-color: white;
+  background-color: #FFFA;
   mat-card-content {
     padding: unset;
     .name {
